fix: transition collapse 动画根元素无法设置内边距

--- a/src/component/collapseItem/index.less
+++ b/src/component/collapseItem/index.less
@@ -23,7 +23,6 @@
 }
 
 .layui-colla-content {
-  display: none;
   padding: 10px 15px;
   line-height: 1.6;
   color: #666;
